# inventario-cappellettoshop

./: .gitignore  GEMINI.md  README.md  SETUP_COMPLETE.md  SHOPIFY_INVENTORY_TRACKING.md  STOCK_MANAGER_IMPROVEMENTS.md  latest.json  package-lock.json  package.json
.github/workflows/: daily_stock_check.yml  release.yml  stock_check.yml
docs/: CONSOLE_LOGGING_GUIDE.md  FIREBASE_INTEGRATION_README.md  SETUP_COMPLETE.md  STOCK_MANAGER_README.md  TEST_README.md  TRANSFER_TESTS.md  VERSION_MANAGEMENT.md
scripts/: set-active.ts  stock-manager.ts  update-version.cjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  TEST_README.md  tauri.conf.json  test.sh
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/firebase/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/location/: mod.rs
src-tauri/src/products/: mod.rs
src-tauri/src/status/: mod.rs
src-tauri/src/stock/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/tests/: integration_tests.rs  test_runner.rs
src/components/: CheckRequestActionModal.tsx  CheckRequestModal.tsx  CheckRequestsPage.tsx  DataPage.tsx  HomePage.tsx  ModificationHistoryModal.tsx  SearchBar.tsx  StatisticsPage.tsx  UpdateModal.tsx
src/contexts/: LogContext.tsx
src/hooks/: useUpdater.ts
src/services/: tauri.ts  updater.ts
src/test/: setup.ts  transfer.test.tsx
src/types/: index.ts
src/utils/: location.ts  version.ts
